crates/dsql-core/tests/it/snapshots/it__sql__policy_match_edits_rederive_fragment_dependent_sql.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: "format!(\"before:\\n{before}\\n\\nafter:\\n{after}\")"
---
before:
-- Q
select
  "dsql_root"."title" as "title"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'kind_type',
        "kind_type_json_d78b0eec"."kind_type_result_d78b0eec",
        'movie_info_idx',
        "movie_info_idx_json_3575fa4a"."movie_info_idx_result_3575fa4a"
      ) as "title"
    from
      "public"."title" as "title_d4d9f554"
      left join LATERAL (
        select
          JSON_BUILD_OBJECT(
            'id',
            "kind_type_d78b0eec"."id",
            'kind',
            "kind_type_d78b0eec"."kind"
          ) as "kind_type_result_d78b0eec"
        from
          "public"."kind_type" as "kind_type_d78b0eec"
        where
          "kind_type_d78b0eec"."id" = "title_d4d9f554"."kind_id"
          and "kind_type_d78b0eec"."id" > 900001
      ) as "kind_type_json_d78b0eec" on true
      left join LATERAL (
        select
          COALESCE(
            JSON_AGG(
              JSON_BUILD_OBJECT(
                'id',
                "movie_info_idx_3575fa4a"."id",
                'info',
                "movie_info_idx_3575fa4a"."info"
              )
            ),
            '[]'
          ) as "movie_info_idx_result_3575fa4a"
        from
          (
            select
              *
            from
              "public"."movie_info_idx" as "movie_info_idx_3575fa4a"
            where
              "movie_info_idx_3575fa4a"."movie_id" = "title_d4d9f554"."id"
            limit
              10
          ) as "movie_info_idx_3575fa4a"
      ) as "movie_info_idx_json_3575fa4a" on true
    limit
      1
  ) as "dsql_root" on true

after:
-- Q
select
  "dsql_root"."title" as "title"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'kind_type',
        "kind_type_json_d78b0eec"."kind_type_result_d78b0eec",
        'movie_info_idx',
        "movie_info_idx_json_3575fa4a"."movie_info_idx_result_3575fa4a"
      ) as "title"
    from
      "public"."title" as "title_d4d9f554"
      left join LATERAL (
        select
          JSON_BUILD_OBJECT(
            'id',
            "kind_type_d78b0eec"."id",
            'kind',
            "kind_type_d78b0eec"."kind"
          ) as "kind_type_result_d78b0eec"
        from
          "public"."kind_type" as "kind_type_d78b0eec"
        where
          "kind_type_d78b0eec"."id" = "title_d4d9f554"."kind_id"
      ) as "kind_type_json_d78b0eec" on true
      left join LATERAL (
        select
          COALESCE(
            JSON_AGG(
              JSON_BUILD_OBJECT(
                'id',
                "movie_info_idx_3575fa4a"."id",
                'info',
                "movie_info_idx_3575fa4a"."info"
              )
            ),
            '[]'
          ) as "movie_info_idx_result_3575fa4a"
        from
          (
            select
              *
            from
              "public"."movie_info_idx" as "movie_info_idx_3575fa4a"
            where
              "movie_info_idx_3575fa4a"."movie_id" = "title_d4d9f554"."id"
              and "movie_info_idx_3575fa4a"."id" > 900001
            limit
              10
          ) as "movie_info_idx_3575fa4a"
      ) as "movie_info_idx_json_3575fa4a" on true
    limit
      1
  ) as "dsql_root" on true
