crates/dsql-core/tests/it/snapshots/it__sql__relation_path_selector_sql.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: "fixture_sql(\"valid/imdb-relation-path-selector.dsql\").await"
---
-- movie_info
select
  "dsql_root"."movie_info" as "movie_info"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'id',
        "movie_info_d37aaa02"."id",
        'title',
        "title_json_85df456e"."title_result_85df456e"
      ) as "movie_info"
    from
      "public"."movie_info" as "movie_info_d37aaa02"
      left join LATERAL (
        select
          JSON_BUILD_OBJECT(
            'aliases',
            "aliases_json_cbbc8bb8"."aliases_result_cbbc8bb8",
            'episodes',
            "episodes_json_33e11afe"."episodes_result_33e11afe"
          ) as "title_result_85df456e"
        from
          "public"."title" as "title_85df456e"
          left join LATERAL (
            select
              COALESCE(
                JSON_AGG(JSON_BUILD_OBJECT('id', "aliases_cbbc8bb8"."id")),
                '[]'
              ) as "aliases_result_cbbc8bb8"
            from
              (
                select
                  *
                from
                  "public"."aka_title" as "aliases_cbbc8bb8"
                where
                  "aliases_cbbc8bb8"."movie_id" = "title_85df456e"."id"
                limit
                  10
              ) as "aliases_cbbc8bb8"
          ) as "aliases_json_cbbc8bb8" on true
          left join LATERAL (
            select
              COALESCE(
                JSON_AGG(
                  JSON_BUILD_OBJECT('id', "episodes_33e11afe"."id")
                ),
                '[]'
              ) as "episodes_result_33e11afe"
            from
              (
                select
                  *
                from
                  "public"."aka_title" as "episodes_33e11afe"
                where
                  "episodes_33e11afe"."episode_of_id" = "title_85df456e"."id"
                limit
                  10
              ) as "episodes_33e11afe"
          ) as "episodes_json_33e11afe" on true
        where
          "title_85df456e"."id" = "movie_info_d37aaa02"."movie_id"
      ) as "title_json_85df456e" on true
    where
      "movie_info_d37aaa02"."id" = 1811435
  ) as "dsql_root" on true
