crates/dsql-core/tests/it/snapshots/it__sql__repeated_flattened_aggregates_and_collection_ordering_render_independently.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: render_sql(&bowl).await
---
-- kind_type
select
  TO_JSON(COUNT(*)) as "kind_count",
  TO_JSON(MIN("kind_type_639d6b68"."kind")) as "first_kind"
from
  "public"."kind_type" as "kind_type_639d6b68"

-- ordered_title
select
  "dsql_root"."ordered_title" as "ordered_title"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'aliases',
        "aliases_json_5623ec84"."aliases_result_5623ec84"
      ) as "ordered_title"
    from
      "public"."title" as "ordered_title_f2d3b1aa"
      left join LATERAL (
        select
          COALESCE(
            JSON_AGG(
              JSON_BUILD_OBJECT(
                'id',
                "aliases_5623ec84"."id",
                'kind_id',
                "aliases_5623ec84"."kind_id"
              )
              order by
                "aliases_5623ec84"."kind_id" desc,
                "aliases_5623ec84"."id" asc
            ),
            '[]'
          ) as "aliases_result_5623ec84"
        from
          (
            select
              *
            from
              "public"."aka_title" as "aliases_5623ec84"
            where
              "aliases_5623ec84"."movie_id" = "ordered_title_f2d3b1aa"."id"
            order by
              "aliases_5623ec84"."kind_id" desc,
              "aliases_5623ec84"."id" asc
            limit
              16
          ) as "aliases_5623ec84"
      ) as "aliases_json_5623ec84" on true
    where
      "ordered_title_f2d3b1aa"."id" = 943844
    limit
      1
  ) as "dsql_root" on true

-- ratings
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'id',
        "ratings_f7637813"."id",
        'info',
        "ratings_f7637813"."info"
      )
      order by
        "ratings_f7637813"."info" desc,
        "ratings_f7637813"."id" asc
    ),
    '[]'
  ) as "ratings"
from
  (
    select
      *
    from
      "public"."movie_info_idx" as "ratings_f7637813"
    where
      "ratings_f7637813"."info_type_id" = 101
    order by
      "ratings_f7637813"."info" desc,
      "ratings_f7637813"."id" asc
    limit
      16
  ) as "ratings_f7637813"

-- signals
select
  "dsql_root"."signals" as "signals"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'id',
        "signals_103b5263"."id",
        'rating',
        "movie_info_idx_json_2fef32cf"."rating",
        'votes',
        "movie_info_idx_json_2d4ebf0f"."votes"
      ) as "signals"
    from
      "public"."title" as "signals_103b5263"
      left join LATERAL (
        select
          MAX("movie_info_idx_2fef32cf"."info") as "rating"
        from
          "public"."movie_info_idx" as "movie_info_idx_2fef32cf"
        where
          "movie_info_idx_2fef32cf"."movie_id" = "signals_103b5263"."id"
          and "movie_info_idx_2fef32cf"."info_type_id" = 101
      ) as "movie_info_idx_json_2fef32cf" on true
      left join LATERAL (
        select
          MAX("movie_info_idx_2d4ebf0f"."info") as "votes"
        from
          "public"."movie_info_idx" as "movie_info_idx_2d4ebf0f"
        where
          "movie_info_idx_2d4ebf0f"."movie_id" = "signals_103b5263"."id"
          and "movie_info_idx_2d4ebf0f"."info_type_id" = 100
      ) as "movie_info_idx_json_2d4ebf0f" on true
    where
      "signals_103b5263"."id" = 2
    limit
      1
  ) as "dsql_root" on true

-- singular
select
  "dsql_root"."singular" as "singular"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'id',
        "singular_b1ef7ca7"."id",
        'kind',
        "kind_type_json_39c3eae9"."kind"
      ) as "singular"
    from
      "public"."title" as "singular_b1ef7ca7"
      left join LATERAL (
        select
          "kind_type_39c3eae9"."kind" as "kind"
        from
          "public"."kind_type" as "kind_type_39c3eae9"
        where
          "kind_type_39c3eae9"."id" = "singular_b1ef7ca7"."kind_id"
      ) as "kind_type_json_39c3eae9" on true
    where
      "singular_b1ef7ca7"."id" = 2
    limit
      1
  ) as "dsql_root" on true
