crates/dsql-core/tests/it/snapshots/it__sql__same_slot_aggregate_function_edits_rederive_sql.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: "format!(\"before:\\n{before}\\n\\nafter:\\n{after}\\n\\ngrouped before:\\n{grouped_before}\\n\\ngrouped after:\\n{grouped_after}\")"
---
before:
-- Edge
select
  JSON_BUILD_OBJECT('value', MAX("edge_26e19395"."name")) as "edge"
from
  "public"."users" as "edge_26e19395"

after:
-- Edge
select
  JSON_BUILD_OBJECT('value', MIN("edge_26e19395"."name")) as "edge"
from
  "public"."users" as "edge_26e19395"

grouped before:
-- Edge
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'key',
        "edge_26e19395_groups_46a1febd"."key",
        'count',
        "edge_26e19395_groups_46a1febd"."count"
      )
    ),
    '[]'
  ) as "edge"
from
  (
    select
      "edge_26e19395"."name" as "key",
      COUNT(*) as "count"
    from
      "public"."users" as "edge_26e19395"
    group by
      "edge_26e19395"."name"
  ) as "edge_26e19395_groups_46a1febd"

grouped after:
-- Edge
select
  COALESCE(
    JSON_AGG(
      JSON_BUILD_OBJECT(
        'key',
        "edge_26e19395_groups_46a1febd"."key",
        'count',
        "edge_26e19395_groups_46a1febd"."count"
      )
    ),
    '[]'
  ) as "edge"
from
  (
    select
      "edge_26e19395"."email" as "key",
      COUNT(*) as "count"
    from
      "public"."users" as "edge_26e19395"
    group by
      "edge_26e19395"."email"
  ) as "edge_26e19395_groups_46a1febd"
