crates/dsql-core/tests/it/snapshots/it__sql__scoped_relation_predicate_sql.snap
---
source: crates/dsql-core/tests/it/sql.rs
expression: "fixture_sql(\"valid/imdb-scoped-relation-predicate.dsql\").await"
---
-- title
select
  "dsql_root"."title" as "title"
from
  (
    select
      1) as "dsql_singleton"
  left join LATERAL (
    select
      JSON_BUILD_OBJECT(
        'id',
        "title_d4d9f554"."id",
        'title',
        "title_d4d9f554"."title"
      ) as "title"
    from
      "public"."title" as "title_d4d9f554"
    where
      exists (
        select
          1
        from
          "public"."aka_title" as "aka_title_3d091d70"
        where
          "aka_title_3d091d70"."movie_id" = "title_d4d9f554"."id"
          and ("aka_title_3d091d70"."title" like '%foo%')
      )
    limit
      1
  ) as "dsql_root" on true
